[package]
name = "ara"
version = "0.1.1"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"
description = "Async random access I/O traits"
repository = "https://github.com/fasterthanlime/ara"
readme = "README.md"
license = "Apache-2.0 OR MIT"

keywords = ["io", "async"]
categories = ["asynchronous"]

[dependencies]
async-trait = "0.1.36"
futures = "0.3.5"
thiserror = "1.0.20"
tracing = "0.1.18"
pin-project = "0.4.23"
lru_time_cache = "0.10.0"
bytes = "0.5.6"

[dev-dependencies]
pretty_assertions = "0.6.1"
tracing-subscriber = "0.2.10"
tokio = { version = "0.2.22", features = ["full"] }
tracing-error = "0.1.2"
color-eyre = "0.5.1"
tracing-futures = "0.2.4"
oorandom = "11.1.2"
